--- a/src/app/contacts/style.less
+++ b/src/app/contacts/style.less
@@ -41,9 +41,9 @@
 
 table.gridtable {
   margin-left: 35px;
-  font-size:12px;
+  font-size:16px;
   border-collapse: collapse;
-  width:100%;
+  width:95%;
   line-height: 24px;
 }
 table.gridtable tr {
@@ -55,7 +55,7 @@ table.gridtable tr {
 table.gridtable th {
   //color: #333333;
   //font-weight: bold;
-  font-size:13px;
+  font-size:14px;
   color: #999999;
   padding: 8px;
   border-bottom: 3px solid #e8e8e8;
@@ -65,7 +65,12 @@ table.gridtable td {
   padding: 8px;
 }
 
+.img-avatar {
+  width: 38px;
+  height: 38px;
+}
+
 input.actionbutton {
-  width: 14px;
-  height: 14px;
+  width: 18px;
+  height: 18px;
 }
