--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -429,6 +429,9 @@
 //讨论
 .user-discuss-view {
     padding: 5px;
+    .close-button{
+        float: right;
+    }
     img{
         float: left;
     }
@@ -444,7 +447,7 @@
     .disc-item{
         padding: 10px;
         .disc-box{
-            margin-left: 35px;
+            margin-left: 40px;
             .disc-name{
                 color: #c0c0c0;
                 font-size: 12px;
@@ -690,17 +693,50 @@
               float: left;
             }
             .disc-box{
-              margin-left: 35px;
+              margin-left: 40px;
               .disc-name{
                 color: #c0c0c0;
                 font-size: 12px;
               }
-            .disc-time{
+              .disc-time{
                 color: #c0c0c0;
                 font-size: 12px;
+              }
             }
           }
-          }
+        }
+        
+        .version{
+            position: absolute;
+            top: 30px;
+            left: 15px;
+            right: 0;
+            bottom: 110px;
+            overflow-y: auto;
+            .version-item{
+                border-bottom: 1px solid #CFCFCF;
+                height: 40px;
+                .time-user{           
+                    .version-user{
+                        float: right;
+                    }
+                    .version-time{
+                        float: left;
+                    }
+                }
+                .name-size-action{
+                    .version-name{
+                        float: left;
+                    }
+                    .version-size{
+                        float: left;
+                    }
+                    .version-action{
+                        float: right;
+                    }
+                }
+            }
+            
         }
         
         
