--- a/src/app/sidebar/style.less
+++ b/src/app/sidebar/style.less
@@ -1,6 +1,11 @@
 .sidebar-view {
+    .nav > li > a{
+        color: #7B7B7B;
+    }
     .nav > li > a:hover,
     .nav > li > a:focus {
+        transition: all 0.3s;
+        color: #7B7B7B;
         text-decoration: none;
         background-color: #d6dce2;
     }
@@ -50,16 +55,21 @@
         position: absolute;
     }
     .active{
+        transition: all 0.3s;
         background-color: #d6dce2;
         border-left: 5px solid #1f69ba;
+        a{
+            padding-right: 10px;
+        }
         
     }
+
     
     .storage{
         background-color: #eceff1;
         border-top: 1px solid #c8c8c8;
         bottom: 0;
-        height: 60px;
+        height: 80px;
         padding-top: 14px;
         position: absolute;
         text-align: center;
@@ -71,10 +81,14 @@
         }
         span{
             padding-right: 20px;
+            font-size: 12px;
+            color: #888;
         }
     }
     
     .progress{
+        height: 12px;
         margin-bottom: 5px;
+        background-color: #BDBFC1;
     }
 }
