--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -5,14 +5,14 @@
 
 //文件列表
 .files-view {
-  margin-right: 260px;
+  margin-right: 300px;
   height: 100%;
   position: relative;
   min-width: 600px;
 
   .scroller {
     overflow-y: hidden;
-    bottom: 30px;
+    bottom: 0px;
     left: 0;
     margin-left: 40px;
     right: 0;
@@ -21,6 +21,7 @@
   }
 
   .file-row{
+    margin-right: 40px;
     height: 65px;
     border-bottom: 1px solid #cfcfcf; 
     overflow: hidden;
@@ -45,7 +46,7 @@
        color: #676767;  
     }
     .root-path a:hover, .root-path a:focus{
-      text-decoration: none; 
+      text-decoration: underline; 
     } 
     .folder-crumb a{
       color: #aeaeae;
@@ -53,7 +54,7 @@
       top: 2px;  
     }
     .folder-crumb a:hover, .folder-crumb a:focus{
-      text-decoration: none; 
+      text-decoration: underline; 
     }
     .folder-crumb:last-child{
         a{
@@ -79,6 +80,7 @@
   .title{
      height: 39px; 
      margin-left: 40px;
+     margin-right: 40px;
      border-bottom: 1px solid #afafaf;
      color: #676767;
      .title-checkbox{
@@ -124,19 +126,25 @@
            width: 25%;
            float: left;
            padding-top: 22px;
-           padding-left: 5px; 
+           padding-left: 5px;
+           font-size: 12px;
+           color: #666; 
        }
        .file-sise-td{
            width: 13%;
            float: left;
            padding-top: 22px;
            padding-left: 8px; 
+           font-size: 12px;
+           color: #666;
        }
        .permission-td{
            width: 13%;
            float: left;
            padding-left: 8px; 
            padding-top: 22px; 
+           font-size: 12px;
+           color: #666;
        }
        .action-td{
            width: 15%;
@@ -145,6 +153,8 @@
            padding-left: 8px;
            span{
              margin-left: 3px;
+             font-size: 12px;
+             color: #666;
            } 
        }
        a:hover, a:focus{
@@ -212,13 +222,21 @@
       white-space: nowrap;
       padding-left: 8px;
       padding-top: 5px;
+      a{
+        color: #333;
+        font-weight: 500;
+      }
+      a:hover{
+        color: #1f69ba;
+      }
     }
     .tag{
-      color: white;
-      font-size: 11px;
-      span{       
+      color: #fff;
+      font-size: 10px;
+      span{
+        display: inline-block;       
         background-color: #c2c2c2;
-        padding: 0 4px;
+        padding: 1px 4px;
         border-radius: 1px;
       }
     }  
@@ -262,14 +280,18 @@
 }
 
 .team-collaboration{
-    width: 260px;
+    width: 300px;
     border-left: 1px solid #ddd;
     position: absolute;
     right: 0;
     top: 0;
     bottom: 0;
     .groups-users-header{
-        background: url("../../images/web_topbar_gray.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+      height: 36px;
+      line-height: 36px;
+      margin-bottom: 10px;
+      color: #555;
+      background-color: #E8ECF0;
     }
     .dropdown-menu{
         li{
@@ -314,6 +336,9 @@
                     > li > a{
                         padding: 3px 8px;
                     }
+                    > li > a:hover{
+                      background-color: #EFEFEF;
+                    }
                 }
             }
             .delete-group{
@@ -340,7 +365,9 @@
         padding-left: 30px;
         padding-top: 5px;
         padding-bottom: 5px;
-        padding-right: 6px;
+        padding-right: 12px;
+        font-size: 12px;
+        color: #666;
         .img{
             float: left;
             width: 35px;
@@ -357,6 +384,7 @@
             float: left;
             position: relative;
             width: 80px;
+            color: #1f69ba;
             span{
                 cursor: pointer;
             }
@@ -429,9 +457,6 @@
 //讨论
 .user-discuss-view {
     padding: 5px;
-    .close-button{
-        float: right;
-    }
     img{
         float: left;
     }
@@ -447,7 +472,7 @@
     .disc-item{
         padding: 10px;
         .disc-box{
-            margin-left: 40px;
+            margin-left: 35px;
             .disc-name{
                 color: #c0c0c0;
                 font-size: 12px;
@@ -693,50 +718,17 @@
               float: left;
             }
             .disc-box{
-              margin-left: 40px;
+              margin-left: 35px;
               .disc-name{
                 color: #c0c0c0;
                 font-size: 12px;
               }
-              .disc-time{
+            .disc-time{
                 color: #c0c0c0;
                 font-size: 12px;
-              }
             }
           }
-        }
-        
-        .version{
-            position: absolute;
-            top: 30px;
-            left: 15px;
-            right: 0;
-            bottom: 110px;
-            overflow-y: auto;
-            .version-item{
-                border-bottom: 1px solid #CFCFCF;
-                height: 40px;
-                .time-user{           
-                    .version-user{
-                        float: right;
-                    }
-                    .version-time{
-                        float: left;
-                    }
-                }
-                .name-size-action{
-                    .version-name{
-                        float: left;
-                    }
-                    .version-size{
-                        float: left;
-                    }
-                    .version-action{
-                        float: right;
-                    }
-                }
-            }
-            
+          }
         }
         
         
