--- a/src/app/global.less
+++ b/src/app/global.less
@@ -20,7 +20,7 @@ html, body {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 260px;
+    width: 200px;
     position: absolute;
     border-right:1px solid #bbbbbb;
     background-color: #eceff1;
@@ -30,7 +30,7 @@ html, body {
     position: absolute;
     bottom: 40px;
     min-width: 860px;
-    left: 260px;
+    left: 200px;
     right: 0;
     top: 0;
 }
@@ -38,12 +38,13 @@ html, body {
 .main-bottom{
     position: absolute;
     bottom: 0;
-    width: 100%;
-    height: 40px;
-    text-align: center;
-    font-size: 12px;
-    border-top:1px solid #afafaf;
     left: 260px;
+    right: 0;
+    height: 40px;
+    font-size: 12px;
+    color: #888;
+    border-top:1px solid #afafaf;
+    left: 200px;
 }
 
 .ng-pageslide {
@@ -57,4 +58,19 @@ html, body {
     right: 0;
     top: 0;
     width: 460px;
+}
+
+.dropdown-menu{
+    font-size: 13px;
+    padding: 0;
+    color: #666; 
+    > li > a{
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    > li > a:hover,
+    > li > a:focus{
+        color: #fff;
+        background-color: #1f69ba;
+    }
 }
