--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -1,81 +1,34 @@
 <div class="header-view" ng-controller="App.Header.Controller">
-	<div class="header-top">
-		<div class="user-info pull-right" dropdown is-open="status.isopen">
-			<div class="username dropdown-toggle" ng-class="{hover: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false">
-				<span>{{user.user_name}}</span>
-				<div class="personalInfor"></div>
-			</div>
-			<ul class="dropdown-menu" role="menu">
-        		<li ng-click = "userInfoWin()"><a>个人信息</a></li>
-        		<li ng-click = "toLogin()"><a>退出</a></li>
-      </ul>
-			<img class="userpic" ng-src="{{user.avatar}}" alt="" />
-		</div>
-		<div class="to-admin-control pull-right" ng-click = "toadmin()">
-			管理控制台
-		</div>
-		<div class="notif_box" class="message-notice pull-right">
-		  <div class="message-dropdown" dropdown>
-		    <span class="message dropdown-toggle" title="消息" ng-click = "openMessageList()"></span>
-        <label class="message-count letter-count" ng-show = "showMessageCount">{{messageCount}}</label>
-        <perfect-scrollbar class="dropdown-menu" role="menu" class="scroller" wheel-propagation="true" wheel-speed="50" refresh-on-change="">
-           <li ng-click = "messageDetail(message)" ng-repeat="message in messageList" ng-class = "{ isRead : message.is_read == 'true' }">
-             <a>
-              <div>
-                <img class="message-userpic" ng-src="{{message.avatar}}" alt="" height="30px" width="30px"/>
-                <div class="message-content">
-                  <div class="message-tittle-date">
-                    <label class="message-tittle">{{message.title}}</label>
-                    <label class="message-date">{{message.format_date}}</span>
-                  </div>
-                  <div class="message-msg">
-                    {{message.content}}
-                  </div>
-                  <div class="message-action">
-                    <label class="message-read" ng-click = "toIsRead($event, message)"></label>
-                    <label class="message-delete" ng-click = "deleteMessage($event, message)"></span>
-                  </div>
-                </div>
-              </div>
-             </a>
-           </li>
-        </perfect-scrollbar>
-		  </div>
-		  <div class="notice-dropdown" dropdown>
-			 <span class="notice dropdown-toggle" title="通知" ng-click = "openNoticeList()"></span>
-			 <label class="message-count notice-count" ng-show = "showMoticeCount">{{noticeCount}}</label>
-			 <perfect-scrollbar class="dropdown-menu" role="menu" class="scroller" wheel-propagation="true" wheel-speed="50" refresh-on-change="">
-          <li ng-repeat="message in noticeList" ng-class = "{ isRead : message.is_read == 'true' }">
-             <a>
-              <div>
-                <img class="message-userpic" ng-src="{{message.avatar}}" alt="" height="30px" width="30px"/>
-                <div class="message-content">
-                  <div class="message-tittle-date">
-                    <label class="message-tittle">{{message.title}}</label>
-                    <label class="message-date">{{message.format_date}}</span>
-                  </div>
-                  <div class="message-msg">
-                    {{message.content}}
-                  </div>
-                  <div class="message-action">
-                    <label class="message-read" ng-click = "toIsRead($event, message)"></label>
-                    <label class="message-delete" ng-click = "deleteMessage($event, message)"></span>
-                  </div>
-                </div>
-              </div>
-             </a>
-           </li>
-       </perfect-scrollbar>
-		  </div>
-		</div>
-	</div>
-	<div class="header-search" role="navigation">
-		<div class="logo pull-left"></div>
-		<div class="search pull-left">
-			<input type="text" placeholder="搜索" class="search-text form-control">
-			<button class="search-button btn btn-default">
-				搜索
-			</button>
-		</div>
-	</div>
+  <div class="header-top">
+    <div class="slogan pull-left">云时代的高效协作平台</div>
+    <div class="user-info pull-right" dropdown is-open="status.isopen">
+      <div class="username dropdown-toggle" ng-class="{hover: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false">
+        <span>{{user.user_name}}</span>
+        <div class="personalInfor"></div>
+      </div>
+      <ul class="dropdown-menu" role="menu">
+            <li ng-click = "userInfoWin()"><a>账号设置</a></li>
+            <li ng-click = "toLogin()"><a>退出</a></li>
+          </ul>
+      <img class="userpic" ng-src="{{user.avatar}}" alt="" />
+    </div>
+    <div class="to-admin-control pull-right" ng-click = "toadmin()">
+      管理控制台
+    </div>
+    <div class="notif_box" class="message-notice pull-right">
+      <span class="notice" title="通知"></span>
+      <label class="message-count notice-count" ng-show = "showMoticeCount">{{noticeCount}}</label>
+      <span class="message" title="消息"></span>
+      <label class="message-count letter-count" ng-show = "showMessageCount">{{messageCount}}</label>
+    </div>
+  </div>
+  <div class="header-search" role="navigation">
+    <div class="logo pull-left"></div>
+    <div class="search pull-left">
+      <input type="text" placeholder="搜索" class="search-text form-control">
+      <button class="search-button btn btn-default">
+        搜索
+      </button>
+    </div>
+  </div>
 </div>
