update-User-img

--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -299,6 +299,20 @@
         margin-bottom: 5px;
     }
     
+    .upload-box{
+        height: 100%;
+        width: 100%;
+    }
+    .upload-div{
+        position: absolute;
+        height: 64px;
+        width: 64px;
+        top: 0px;
+        cursor: pointer;
+    }
+    .updateImg{
+        height: 64px;
+    }
     .save-button{
         margin-top: 30px;
     }
