--- a/src/app/global.less
+++ b/src/app/global.less
@@ -7,6 +7,10 @@ html, body {
     width: 100%;
 }
 
+h3 {
+    font-size: 18px;
+}
+
 .main{
     bottom: 0;
     left: 0;
@@ -45,6 +49,13 @@ html, body {
     color: #888;
     border-top:1px solid #afafaf;
     left: 200px;
+    div{
+        float: right;
+        margin: 11.5px 40px;
+    }
+    :first-child{
+        float: left;
+    }
 }
 
 .ng-pageslide {
