--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -1,5 +1,6 @@
 <div class="header-view" ng-controller="App.Header.Controller">
 	<div class="header-top">
+    <div class="slogan pull-left">云时代的高效协作平台</div>
 		<div class="user-info pull-right" dropdown is-open="status.isopen">
 			<div class="username dropdown-toggle" ng-class="{hover: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false">
 				<span>{{user.user_name}}</span>
