--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -23,20 +23,20 @@
             cursor: pointer;
             border-right: 1px solid #2273cc;
             border-left: 1px solid #1b599b;
-            font-size: 15px;
+            font-size: 13px;
             padding-right: 10px;
             padding-left: 10px;
             height: 22px;
             margin-top: 4px;
-            line-height: 1.3;
+            line-height: 22px;
         }
         
         .notif_box {
             position:relative;
             float: right;
             padding-right: 10px;
-            height: 22px;
-            margin-top: 4px;
+            height: 18px;
+            margin-top: 7px;
             border-right: 1px solid #2273cc;
             span{
                 display: inline-block;
@@ -150,16 +150,16 @@
             }
             
             .notice{
-                background: url('../../images/topbar_notification_icon.png') no-repeat;
+                background: url('../../images/topbar_notification_icon_24.png') no-repeat;
                 height: 21px;
                 cursor: pointer;
-                background-position: -57px -4px;
+                background-position: -45px -4px;
                 width: 10px;
                 height: 24px;
             }
             .message{
-                background: url('../../images/topbar_notification_icon.png') no-repeat;
-                background-position: -13px -4px;
+                background: url('../../images/topbar_notification_icon_24.png') no-repeat;
+                background-position: -10px -4px;
                 margin-right: 15px;
                 height: 24px;
                 width: 20px;
@@ -191,7 +191,7 @@
         
         .username {
             margin-right: 40px;
-            margin-top: 4px;
+            margin-top: 5px;
             font-size: 14px;
             float: right;
             margin-left: 8px;
@@ -200,12 +200,12 @@
                float: left;
                margin-right: 7px;
                margin-top: -5px;
-               font-size:15px; 
+               font-size:13px; 
            }
         }
         
         .personalInfor{
-            margin-top: 4px;
+            margin-top: 1px;
             background: url(../../images/arrows.png) no-repeat;
             -moz-transition:-moz-transform 0.2s; /* Firefox 4 */
             -webkit-transition:-webkit-transform 0.2s; /* Safari and Chrome */
@@ -244,9 +244,14 @@
         
         .userpic {
             float: right;
-            margin-top: -2px;
-            width: 26px;
-            height: 26px;
+            margin-top: 1px;
+            width: 20px;
+            height: 20px;
+        }
+
+        .slogan {
+            font-size: 12px;
+            margin: 6.5px 20px;
         }
         
     }
