--- a/src/app/trash/style.less
+++ b/src/app/trash/style.less
@@ -1,6 +1,6 @@
 //文件列表
 .trash-view {
-  margin-right: 260px;
+  margin-right: 300px;
   height: 100%;
   position: relative;
   min-width: 600px;
@@ -17,6 +17,7 @@
   .file-row{
     height: 65px;
     border-bottom: 1px solid #cfcfcf; 
+    margin-right: 40px;
   }
   .file-row:hover{
       background-color: #ebf1f7;
@@ -72,6 +73,7 @@
   .title{
      height: 39px; 
      margin-left: 40px;
+     margin-right: 40px;
      border-bottom: 1px solid #afafaf;
      color: #676767;
      .title-checkbox{
@@ -125,19 +127,21 @@
            width: 25%;
            float: left;
            padding-top: 22px;
-           padding-left: 5px;
            text-overflow: ellipsis;
            white-space: nowrap;
            overflow: hidden; 
+           font-size: 12px;
+           color: #666;
        }
        .file-sise-td{
            width: 13%;
            float: left;
            padding-top: 22px;
-           padding-left: 8px;
            text-overflow: ellipsis;
            white-space: nowrap;
            overflow: hidden; 
+           font-size: 12px;
+           color: #666;
            span{
               text-overflow: ellipsis;
               white-space: nowrap;
@@ -203,7 +207,7 @@
     float: left;
     padding-top: 10px;
     min-width: 315px;
-    padding-left: 8px;
+    
     .rename-form{
         float: left;
         width: 260px; 
@@ -223,6 +227,12 @@
       white-space: nowrap;
       padding-left: 8px;
       padding-top: 5px;
+      a{
+        color: #333;
+      }
+      a:hover{
+        color: #333;
+      }
     }
     .tag{
       color: white;
