--- a/src/app/upload-progress-dialog/style.less
+++ b/src/app/upload-progress-dialog/style.less
@@ -46,8 +46,10 @@
 .upload-progress-dialog .btn-close {
   background-position:0 -14px;
 }
-.upload-progress-dialog .dialog-body {
-  height: 288px;
+.upload-progress-dialog .scroller {
+  overflow-y: hidden;
+  height: 280px;
+  position: relative;  
 }
 .upload-progress-dialog  .progress-item {
   height:30px;
