--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -73,8 +73,8 @@
 	<div class="header-search" role="navigation">
 		<div class="logo pull-left"></div>
 		<div class="search pull-left">
-			<input type="text" placeholder="搜索" class="search-text form-control">
-			<button class="search-button btn btn-default">
+			<input type="text" placeholder="搜索文件或者文件夹" class="search-text form-control" ng-model = "searchFilesValue" ng-keydown = "searchByKeyDown($event,searchFilesValue)">
+			<button class="search-button btn btn-default" ng-click = "searchByButton(searchFilesValue)">
 				搜索
 			</button>
 		</div>
