Newest enhancement of UI for index page.

--- a/src/app/files/invite-team-users/template.html
+++ b/src/app/files/invite-team-users/template.html
@@ -35,6 +35,7 @@
           </div>
         </div>
       </div>
+      <h5>访问权限</h5>
       <div class="form-group">
         <div class="col-sm-12">
           <div class="dropdown" is-open="permissionOpen">
