--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -72,8 +72,8 @@
 	</div>
 	<div class="header-search" role="navigation">
 		<div class="logo pull-left"></div>
-		<div class="search pull-left">
-			<input type="text" placeholder="搜索" class="search-text form-control">
+		<div class="search">
+			<input type="text" placeholder="搜索文件" class="search-text form-control">
 			<button class="search-button btn btn-default">
 				搜索
 			</button>
