--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -53,7 +53,7 @@
 								<button ng-click="createFolder(createFolderName)" class="btn btn-default">
 									确定
 								</button>
-								<button ng-click="cancleCreate()" class="btn btn-default">
+								<button ng-click="cancelCreate()" class="btn btn-default">
 									取消
 								</button>
 							</div>
@@ -84,7 +84,7 @@
 									<button ng-click="renameFile($event, obj)" class="btn btn-default">
 										确定
 									</button>
-									<button ng-click="cancleRenameFile($event, obj)" class="btn btn-default">
+									<button ng-click="cancelRenameFile($event, obj)" class="btn btn-default">
 										取消
 									</button>
 								</div>
